--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
             <!-- 头部区域（可配合layui已有的水平导航） -->
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
-                    <a href="javascript:;"  class="userinfo">
+                    <a href="javascript:;" class="userinfo">
                         <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
-                        <span id="text-avatar">A</span>
+                        <span id="text-avatar"></span>
                         个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="href=/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="href=/user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="href=/user_pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="javascript:;" id="btnLogout">
-                    <span class="iconfont icon-tuichu" ></span>退出</a></li>
+                        <span class="iconfont icon-tuichu"></span>退出</a></li>
             </ul>
         </div>
 
@@ -41,32 +41,35 @@
             <div class="layui-side-scroll">
                 <div class="userinfo">
                     <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
-                   <span class="text-avatar">A</span>
-                   <span id="welcome">欢迎 ****</span>
+                    <span class="text-avatar">A</span>
+                    <span id="welcome">欢迎 ****</span>
                 </div>
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-                <ul class="layui-nav layui-nav-tree" lay-shrink="all" >
+                <ul class="layui-nav layui-nav-tree" lay-shrink="all">
                     <li class="layui-nav-item layui-this"><a href="/home/dashboard.html" target="fm">
-                        <span class="iconfont icon-home"></span>首页</a></li>
+                            <span class="iconfont icon-home"></span>首页</a></li>
                     <li class="layui-nav-item ">
                         <a class="" href="javascript:;">
                             <span class="iconfont icon-16"></span>文章管理</a>
                         <dl class="layui-nav-child">
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-align-left"></i>文章类别</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-align-left"></i>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-align-left"></i>发布文章</a></dd>             
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-align-left"></i>发布文章</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
                         <a href="javascript:;">
                             <span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-align-left"></i>基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-align-left"></i>更换头像</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-align-left"></i>重置密码</a></dd>
+                            <dd><a href="/user_info.html" target="fm"><i class="layui-icon layui-icon-app"></i>基本资料</a>
+                            </dd>
+                            <dd><a href="/user_avatar.html" target="fm"><i
+                                        class="layui-icon layui-icon-align-left"></i>更换头像</a></dd>
+                            <dd><a href="/user_pwd.html" target="fm"><i
+                                        class="layui-icon layui-icon-align-left"></i>重置密码</a></dd>
                         </dl>
                     </li>
-                                
+
                 </ul>
             </div>
         </div>
