--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                         <a class="" href="javascript:;">
                             <span class="iconfont icon-16"></span>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-align-left"></i>文章类别</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-align-left"></i>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-align-left"></i>发布文章</a></dd>
+                            <dd><a href="/art_cate.html" target="fm"><i
+                                        class="layui-icon layui-icon-align-left"></i>文章类别</a></dd>
+                            <dd><a href="/art_list.html" target="fm"><i class="layui-icon layui-icon-align-left"></i>文章列表</a></dd>
+                            <dd><a href="/art_pub.html" target="fm"><i class="layui-icon layui-icon-align-left"></i>发布文章</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
